<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutPrincipal"
    tools:context=".DatosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datos_nombre_label"
            style="@style/Titulos"/>
        <TextView
            android:id="@+id/datos_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Textos"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datos_nacimiento_label"
            style="@style/Titulos"/>
        <TextView
            android:id="@+id/datos_nacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Textos"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datos_telefono_label"
            style="@style/Titulos"/>
        <TextView
            android:id="@+id/datos_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Textos"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datos_email_texto"
            style="@style/Titulos"/>
        <TextView
            android:id="@+id/datos_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Textos"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datos_descripcion_texto"
            style="@style/Titulos"/>
        <TextView
            android:id="@+id/datos_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Textos"/>
        
        <Button
            android:id="@+id/datos_btnEditar"
            android:text="@string/datos_boton_editar_label"
            style="@style/Botones"
            />
    </LinearLayout>
</LinearLayout>